finished get prediction endpoint implementation
