# hexagonal-flask-app/app/adapters/rest/flask_server/swagger_server/models/get_physical_act_response_body201.py
@@ -1,0 +1,96 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class GetPhysicalActResponseBody201(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, prediction: List=None, status: str=None):  # noqa: E501
+        """GetPhysicalActResponseBody201 - a model defined in Swagger
+
+        :param prediction: The prediction of this GetPhysicalActResponseBody201.  # noqa: E501
+        :type prediction: List
+        :param status: The status of this GetPhysicalActResponseBody201.  # noqa: E501
+        :type status: str
+        """
+        self.swagger_types = {
+            'prediction': List,
+            'status': str
+        }
+
+        self.attribute_map = {
+            'prediction': 'prediction',
+            'status': 'status'
+        }
+        self._prediction = prediction
+        self._status = status
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetPhysicalActResponseBody201':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The get_physical_act_response_body_201 of this GetPhysicalActResponseBody201.  # noqa: E501
+        :rtype: GetPhysicalActResponseBody201
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def prediction(self) -> List:
+        """Gets the prediction of this GetPhysicalActResponseBody201.
+
+        prediction of the physical activity  # noqa: E501
+
+        :return: The prediction of this GetPhysicalActResponseBody201.
+        :rtype: List
+        """
+        return self._prediction
+
+    @prediction.setter
+    def prediction(self, prediction: List):
+        """Sets the prediction of this GetPhysicalActResponseBody201.
+
+        prediction of the physical activity  # noqa: E501
+
+        :param prediction: The prediction of this GetPhysicalActResponseBody201.
+        :type prediction: List
+        """
+        if prediction is None:
+            raise ValueError("Invalid value for `prediction`, must not be `None`")  # noqa: E501
+
+        self._prediction = prediction
+
+    @property
+    def status(self) -> str:
+        """Gets the status of this GetPhysicalActResponseBody201.
+
+        status of the prediction  # noqa: E501
+
+        :return: The status of this GetPhysicalActResponseBody201.
+        :rtype: str
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status: str):
+        """Sets the status of this GetPhysicalActResponseBody201.
+
+        status of the prediction  # noqa: E501
+
+        :param status: The status of this GetPhysicalActResponseBody201.
+        :type status: str
+        """
+        if status is None:
+            raise ValueError("Invalid value for `status`, must not be `None`")  # noqa: E501
+
+        self._status = status
